--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
         maven {url  "http://maven.rongcloud.cn/repository/maven-releases/"}
     }
     dependencies {
@@ -17,6 +18,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
         maven {url  "http://maven.rongcloud.cn/repository/maven-releases/"}
     }
 }
