--- a/kit/build.gradle
+++ b/kit/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 20210524
         versionName "5.1.2"
@@ -32,7 +32,8 @@ android {
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
-    api 'cn.rongcloud.sdk:im_lib:5.1.2'
+//    api 'cn.rongcloud.sdk:im_lib:5.1.2'
+    api 'cn.rongcloud.sdk:im_lib:5.1.1.1'
     //基础布局
     api 'androidx.appcompat:appcompat:1.2.0'
     api 'androidx.fragment:fragment:1.2.5'
