--- a/kit/build.gradle
+++ b/kit/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     api 'androidx.recyclerview:recyclerview:1.1.0'
     api 'androidx.constraintlayout:constraintlayout:2.0.4'
     api 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-    api "androidx.viewpager2:viewpager2:1.1.0-alpha01"
+    api "androidx.viewpager2:viewpager2:1.0.0"
     // content 协议头处理
     api "androidx.documentfile:documentfile:1.0.1"
     //本地广播
